selforg/build_output.log
g++ -c -Wall -pipe -fpic -I./. -I./controller -I./wirings -I./utils -I./matrix -I./statistictools -I./statistictools/measure -I./statistictools/dataanalysation -Iinclude -Iinclude/selforg -std=c++17 -pthread -I/Users/jerry/lpzrobots/include -I/opt/homebrew/Cellar/gsl/2.8/include -DNOCONFIGURATOR -g -O  -o "build/./agent.o" "agent.cpp"
In file included from agent.cpp:25:
In file included from ./agent.h:31:
In file included from ./wiredcontroller.h:31:
In file included from ./utils/plotoptionengine.h:30:
./utils/plotoption.h:102:20: error: 'getPlotOptionMode' marked 'override' but does not override any member functions
  102 |   virtual PlotMode getPlotOptionMode() const override {
      |                    ^
./utils/plotoption.h:107:16: error: 'setFilter' marked 'override' but does not override any member functions
  107 |   virtual void setFilter(const std::list<std::string>& accept,
      |                ^
./utils/plotoption.h:110:16: error: 'setFilter' marked 'override' but does not override any member functions
  110 |   virtual void setFilter(const std::string& filter) override;
      |                ^
./utils/plotoption.h:113:16: error: 'flush' marked 'override' but does not override any member functions
  113 |   virtual void flush(long step) override;
      |                ^
./utils/plotoption.h:128:56: error: unknown type name 'override'
  128 |   void addConfigurablestatic_cast<const Configurable*>(override);
      |                                                        ^
./utils/plotoption.h:128:8: error: template specialization requires 'template<>'
  128 |   void addConfigurablestatic_cast<const Configurable*>(override);
      |        ^                         ~~~~~~~~~~~~~~~~~~~~~
      |   template<> 
./utils/plotoption.h:139:16: error: 'useChannel' marked 'override' but does not override any member functions
  139 |   virtual bool useChannel(const std::string& name) override;
      |                ^
./utils/plotoption.h:141:15: error: 'printInspectables' marked 'override' but does not override any member functions
  141 |   virtual int printInspectables(const std::list<const Inspectable*>& inspectables, int cnt = 0) override;
      |               ^
./utils/plotoption.h:143:15: error: 'printInspectableNames' marked 'override' but does not override any member functions
  143 |   virtual int printInspectableNames(const std::list<const Inspectable*>& inspectables, int cnt = 0) override;
      |               ^
./utils/plotoption.h:145:16: error: 'printInspectableInfoLines' marked 'override' but does not override any member functions
  145 |   virtual void printInspectableInfoLines(const std::list<const Inspectable*>& inspectables) override;
      |                ^
./utils/plotoption.h:167:89: error: only virtual member functions can be marked 'override'
  167 |   void printNetworkDescription(const std::string& name, const Inspectable* inspectable) override;
      |                                                                                         ^~~~~~~~
./utils/plotoption.h:74:21: error: expected ';' after expression
   74 |     mask.resize(256) override;
      |                     ^
      |                     ;
./utils/plotoption.h:74:22: error: use of undeclared identifier 'override'
   74 |     mask.resize(256) override;
      |                      ^
./utils/plotoption.h:95:24: error: expected ';' after expression
   95 |       setFilter(filter) override;
      |                        ^
      |                        ;
./utils/plotoption.h:95:25: error: use of undeclared identifier 'override'
   95 |       setFilter(filter) override;
      |                         ^
./utils/plotoption.h:97:21: error: expected ';' after expression
   97 |     mask.resize(256) override;
      |                     ^
      |                     ;
./utils/plotoption.h:97:22: error: use of undeclared identifier 'override'
   97 |     mask.resize(256) override;
      |                      ^
./utils/plotoption.h:124:48: error: expected ';' after return statement
  124 |       return (static_cast<int>(m.mode) == mode) override;
      |                                                ^
      |                                                ;
In file included from agent.cpp:25:
In file included from ./agent.h:31:
In file included from ./wiredcontroller.h:31:
In file included from ./utils/plotoptionengine.h:31:
In file included from include/selforg/abstractcontroller.h:27:
In file included from include/selforg/configurable.h:31:
include/selforg/backcaller.h:52:16: error: only virtual member functions can be marked 'override'
   52 |   BackCaller() override;
      |                ^~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [build/./agent.o] Error 1
